Accessibility: Prevent false NCNE speech bubble contrast error.

--- a/src/NCNEPortal/wwwroot/css/site.css
+++ b/src/NCNEPortal/wwwroot/css/site.css
@@ -810,6 +810,7 @@ input:checked + .slider:before {
     color: white;
     text-align: center;
     width: 26px;
+    background-color: #09315B;
 }
 
 .speech.bubble > i {
